# hexapawn

./: README.md  exec.sh  pyproject.toml
hexapawn/: main.py
hexapawn/environment/: action.py  board.py  environment.py  pawns.py
hexapawn/players/: action_response.py  agent.py  ai_agent.py  minimax.py  no_action_exception.py  percept.py  user_agent.py
